[tool.poetry]
name = "samwise"
version = "0.1.0"
description = "Assessing writing comprehension using LLMs."
authors = ["jmhayes3 <0.chariot.zombies@icloud.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
langchain = ">=0.0.271"
gpt4all = ">1.0"
chromadb = ">=0.3.0"
PyMuPDF = ">=1.22.0"
python-dotenv = ">=1.0.0"
unstructured = ">=0.8.0"
extract-msg = ">=0.41.0"
tabulate = ">=0.9.0"
pandoc = ">=2.3"
pypandoc = ">=1.11"
tqdm = ">=4.65.0"
sentence-transformers = ">=2.2.0"
pinecone-datasets = "^0.6.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
